Bette handling of class template argument names

--- a/bindgen/macros.j2
+++ b/bindgen/macros.j2
@@ -1,7 +1,7 @@
 {# useful macros -#}
 
 {%- macro cls_name(cls) -%}
-    {{ cls.name|replace('<', '_')|replace('>', '') }}
+    {{ cls.name|replace('<', '_')|replace(' ', '_')|replace('>', '') }}
 {%- endmacro -%}
 
 {%- macro pointer(cls) -%}
