--- a/bindgen/CMakeLists.j2
+++ b/bindgen/CMakeLists.j2
@@ -2,33 +2,33 @@ cmake_minimum_required( VERSION 3.16 )
 project( {{ name }}
          LANGUAGES CXX )
 
-list( APPEND CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR} )
 
-if(WIN32)
-  set( PYTHON_EXECUTABLE "$ENV{CONDA_PREFIX}/python.exe" )
-  add_compile_definitions( _hypot=hypot _AMD64_ _WINDOWS)
-  execute_process(COMMAND ${PYTHON_EXECUTABLE} -c "from sys import version_info as vi; print(f'{vi.major}{vi.minor}')"
-                  OUTPUT_VARIABLE PYTHON_VER )
-  string(STRIP ${PYTHON_VER} PYTHON_VER)
-  set( PYTHON_LIBRARY $ENV{CONDA_PREFIX}/libs/python${PYTHON_VER}.lib )
-else()
-  set( PYTHON_EXECUTABLE "$ENV{CONDA_PREFIX}/bin/python" )
-endif()
-
+find_package( Python REQUIRED COMPONENTS Development Interpreter)
+find_package( VTK REQUIRED
+  COMPONENTS
+    WrappingPythonCore
+    RenderingCore
+    RenderingOpenGL2
+    CommonDataModel
+    CommonExecutionModel
+    freetype
+)
 find_package( pybind11 REQUIRED )
-find_package( OpenCascade REQUIRED COMPONENTS OPENCASCADE )
-
-#clang-cl related workaround
-if(WIN32)
-  set( PYTHON_LIBRARY $ENV{CONDA_PREFIX}/libs/python${PYTHON_VER}.lib )
-endif()
+find_package( OpenCASCADE REQUIRED )
 
 include_directories( ${PROJECT_SOURCE_DIR} )
 file( GLOB CPP_FILES ${PROJECT_SOURCE_DIR}/*.cpp )
 
 add_library( {{ name }} MODULE ${CPP_FILES} )
-
-target_link_libraries( {{ name }} PRIVATE OPENCASCADE pybind11::pybind11 )
+target_link_libraries( {{ name }} PRIVATE 
+  ${OpenCASCADE_LIBRARIES}
+  Python::Module
+  pybind11::pybind11 
+  VTK::WrappingPythonCore
+  VTK::RenderingCore
+  VTK::CommonDataModel
+  VTK::CommonExecutionModel
+  )
 set_target_properties( {{ name }}
                        PROPERTIES
                        CXX_STANDARD 17
@@ -46,7 +46,6 @@ if(WIN32)
                               "Standard_IMPORTC=extern \"C\""
                               "_SILENCE_CXX17_ITERATOR_BASE_CLASS_DEPRECATION_WARNING")
   target_link_libraries( {{ name }} PRIVATE opengl32 )
-  target_link_libraries( {{ name }} PRIVATE ${PYTHON_LIBRARY} )
 else()
   set_target_properties( {{ name }}
                          PROPERTIES
