--- a/bindgen/template_sub.j2
+++ b/bindgen/template_sub.j2
@@ -199,7 +199,7 @@ py::object klass;
              {{ method_pointer(c,m) }},
              R"#({{m.comment}})#"
              {{argnames(m)}}
-             {% if (not is_byref_smart_ptr(m.return_type) and not m.return_type.startswith('const'))
+             {% if (not is_byref_smart_ptr(m.return_type) and not m.return_type.strip().startswith('const'))
                    or "TColgp_" in m.return_type or "TColStd_" in m.return_type %}
              , py::return_value_policy::reference_internal
              {% endif %}
